# airea

./: .replit  ENVIRONMENT_SECRETS_GUIDE.md  ForGilbert.md  IOS_BOTTOM_NAV_FIX.md  PRODUCTION_DATABASE_GUIDE.md  PRODUCTION_DATABASE_SETUP.md  SPLASH_SCREEN_GATING_DOCS.md  URL_PARAMS_SHAREABLE_LINKS.md  ai_search_test_report_20250814_125618.json  app.py  create-icons.js  final-test-report.md  final-test-results.txt  load_test_data.py  migrate-to-production.sh  myipo-submission-checklist.md  package-lock.json  package.json  patent-claims-refined.md  pyproject.toml  replit.md  runGeoJSONExtraction.ts  run_comprehensive_ai_tests.py  sample_kl_properties.csv  search-engine-test-results.md  search-scenario-results.md  tailwind.config.ts  technical-diagrams-guide.md  test-ai-scenarios.js  test-data-integration.js  test-scenario-validation.md  test_ai_search_advanced.py  test_ai_search_comprehensive.py  test_search_ai_scenarios.py  test_search_engine.py  uat-access-summary.md  uat-test-results-updated.md  uat-test-results.md  vite.config.ts
attached_assets/: Invention_Disclosure_Form_EN_1765035299085.docx  Pasted--1-Multi-Language-Input-Scenarios-1-1-Full-Bahasa-Melay_1764767182811.txt  Pasted--CRITICAL-PRIORITY-Must-Fix-Before-Launch-User-Portal-Web-PWA-1-Fix-iOS-Bottom-Navigation-1760367432481_1760367432482.txt  Pasted--Log-Property-selection-debug-isAiSearchActive-true-aiSearchResultsExists-true-aiSearchR-1755284030277_1755284030278.txt  Pasted--Warning-40-console-messages-are-not-shown-Log-Is-conflict-resolution-search-false-SearchRes-1755284239307_1755284239307.txt  (+19 more)
(+213 files in other folders)
